enable L1 atomics for multicore configs

--- a/bp_top/test/tb/bp_tethered/Makefile.cfgs
+++ b/bp_top/test/tb/bp_tethered/Makefile.cfgs
@@ -32,7 +32,12 @@ e_bp_unicore_l1_atomic_cfg_amoen       := 1
 
 e_bp_default_cfg_amoen                 := 0
 
-_AMOEN :=$($(CFG)_amoen)
+ifneq (,$(findstring multicore,$(CFG)))
+	_AMOEN := 1
+else
+	_AMOEN :=$($(CFG)_amoen)
+endif
+
 ifeq ($(_AMOEN),)
 	export AMOEN ?= 0
 else
