--- a/bp_common/syn/Makefile.verilator
+++ b/bp_common/syn/Makefile.verilator
@@ -14,7 +14,8 @@ VV ?= $(VERILATOR)
 VERILATOR_THREADS ?= 1
 ## Tool options
 VV_OPTS  = --cc                 # Output in C++
-VV_OPTS += --debug --gdbbt --trace -trace_structs -g -pg    # Debugs and produces stack trace
+#VV_OPTS += --debug --gdbbt --trace   # Debugs and produces stack trace
+VV_OPTS += --gdbbt --trace   # Debugs and produces stack trace
 VV_OPTS += -O1
 VV_OPTS += --x-assign fast --x-initial fast
 #VV_OPTS += --threads $(VERILATOR_THREADS)
